Completely fix overlay on safari

--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -16,6 +16,7 @@
   z-index: 6;
   box-sizing: border-box;
   overflow: hidden;
+  position: absolute;
 }
 
 .nav__search {
